Refactor and add log.debug